Service page update, bug squashing

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -90,7 +90,7 @@ h1{
 .boxed-inner{
   padding:30px;
   text-align: justify;
-  text-shadow: 0.2rem .2rem .3rem darkblue; 
+ /** text-shadow: 0.2rem .2rem .3rem darkblue; **/
 }
 
 
@@ -164,6 +164,7 @@ h1{
   margin-top:15px;
 }
 .service-icons{
+  color:#399dd6;
   min-width:300px;
   font-size:2em;
   text-align: center;
@@ -278,3 +279,78 @@ to   { opacity: 1; }
    max-width:700px;
   
   }
+  #service-card{
+    text-align: center;
+    background: #333;
+    width:230px;
+    float:left;
+    margin:30px;
+    background: rgb(53, 53, 53);
+    margin-top: 15px;
+    margin-bottom:15px;
+    border: solid  rgb(35, 130, 255) thin;
+    padding:15px;
+    box-shadow: 0 0 5px rgba(0, 59, 114, 0.829);
+    background: linear-gradient(#333, #222329);
+    animation: glowBlue 5s ease-out infinite alternate;
+    border-radius: 15px;
+  }
+  #service-card i{
+    display: block;
+    margin-top:-40px;
+    margin-left:0px;
+    color:#399dd6
+  }
+  #service-card h5{
+    color:#399dd6
+  }
+  #service-card p{
+    text-align: justify
+  }
+  .clr{
+    clear: both;
+  }
+  @keyframes glowBlue {
+    0% {
+		border-color: rgb(35, 130, 255);
+		box-shadow: 0 0 5px rgba(0, 59, 114, 0.829), inset 0 0 5px rgba(0, 53, 114,.1), 0 2px 0 #000;
+    }	
+    100% {
+		border-color: rgb(102, 255, 235);
+		box-shadow: 0 0 20px rgba(0, 132, 255, 0.6), inset 0 0 10px rgba(68, 0, 255, 0.4), 0 2px 0 #000;
+    }
+}
+
+.react-photo-gallery--gallery img{
+  animation: glowBlue 5s ease-out infinite alternate;
+  background: #333;
+  float:left;
+  background: rgb(53, 53, 53);
+  margin-top: 15px;
+  margin-bottom:15px;
+  border: solid  rgb(35, 130, 255) thin;
+  padding:5px;
+  box-shadow: 0 0 5px rgba(0, 59, 114, 0.829);
+  background: linear-gradient(#333, #222329);
+  border-radius: 15px;
+  margin-left:auto;
+  margin-right:auto;
+}
+.center-box{
+  max-width: 600px;
+  margin-left:auto;
+  margin-right:auto;
+
+}
+.center-box img{
+
+
+}
+.service-space{
+  text-align: center;
+  margin-top:50px;
+  padding:10px;
+} 
+.fa-react{
+  animation: App-logo-spin infinite 20s linear;
+}
